--- a/app/src/main/res/layout/atm_row.xml
+++ b/app/src/main/res/layout/atm_row.xml
@@ -2,20 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_margin="6dp"
-    android:layout_height="wrap_content">
-
-    <android.support.v7.widget.CardView
-        android:id="@+id/card_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        card_view:cardCornerRadius="4dp">
-        <LinearLayout
+    android:layout_height="wrap_content"
+    android:layout_margin="6dp">
+    <!--
+        <android.support.v7.widget.CardView
+            android:id="@+id/card_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="5dp"
-            android:orientation="horizontal">
+            android:layout_gravity="center"
+            card_view:cardCornerRadius="4dp">-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="5dp">
 
 
         <LinearLayout
@@ -60,7 +60,7 @@
                 android:maxLines="1"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
         </LinearLayout>
-        </LinearLayout>
-    </android.support.v7.widget.CardView>
+    </LinearLayout>
+    <!--    </android.support.v7.widget.CardView>-->
 
 </LinearLayout>
