--- a/app/src/main/res/layout/fragment_atmmap_view.xml
+++ b/app/src/main/res/layout/fragment_atmmap_view.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/white"
     android:orientation="vertical"
     tools:context="com.thinktanki.atmfinder.atm.ATMmapView">
 
@@ -9,29 +10,31 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.15"
-        android:padding="5dp"
         android:orientation="vertical"
+        android:padding="5dp"
         android:paddingLeft="10dp">
 
         <TextView
             android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:layout_gravity="center"
             android:layout_weight="1"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textStyle="bold"
             android:paddingLeft="15dp"
             android:paddingTop="10dp"
-            android:layout_gravity="center" />
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textStyle="bold" />
+
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1">
+
             <SeekBar
                 android:id="@+id/seekBar"
-                android:layout_gravity="center"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:max="10" />
         </FrameLayout>
     </LinearLayout>
@@ -46,6 +49,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"></com.google.android.gms.maps.MapView>
     </FrameLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
