--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#607D8B</color>
+          <color name="colorPrimary">#2196F3</color>
+        <color name="colorPrimaryDark">#1E88E5</color>
+        <color name="colorAccent">#FF4081</color>
+        <color name="popup_window">#BF000000</color>
+    <!--<color name="colorPrimary">#607D8B</color>
     <color name="colorPrimaryDark">#455A64</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="popup_window">#BF000000</color>
+    <color name="popup_window">#BF000000</color>-->
 </resources>
