--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,8 @@
     <color name="colorAccent">#FF4081</color>
     <color name="popup_window">#BF000000</color>
     <color name="splash_screen">#c873f4</color>
+    <color name="gradientColor">#90caf9</color>
+
 
     <!--<color name="colorPrimary">#607D8B</color>
     <color name="colorPrimaryDark">#455A64</color>
