--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -19,7 +19,7 @@
         android:scaleType="fitXY"
         android:layout_marginBottom="@dimen/nav_header_padding"
         android:layout_marginTop="@dimen/nav_header_padding"
-        android:src="@drawable/icon_atm" />
+        android:src="@drawable/ic_atm" />
 
     <TextView
         android:layout_width="wrap_content"
