--- a/app/src/main/res/layout/fragment_atmlist_view.xml
+++ b/app/src/main/res/layout/fragment_atmlist_view.xml
@@ -3,8 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="com.thinktanki.atmfinder.atm.ATMlistView">
+    tools:context="com.thinktanki.atmfinder.atm.ListFragment">
 
     <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/swipe_refresh_layout"
@@ -19,4 +18,12 @@
             android:scrollbars="vertical" />
 
     </android.support.v4.widget.SwipeRefreshLayout>
+    <TextView
+        android:id="@+id/empty_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:textStyle="bold"
+        android:visibility="gone"
+        android:text="@string/no_data_available" />
 </RelativeLayout>
