--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -5,7 +5,7 @@
     android:background="@android:color/white"
     xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context=".DetailActivity">
+    tools:context=".atm.DetailActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
