--- a/app/src/main/res/layout/fragment_atmmap_view.xml
+++ b/app/src/main/res/layout/fragment_atmmap_view.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:background="@android:color/white"
     android:orientation="vertical"
-    tools:context="com.thinktanki.atmfinder.atm.ATMmapView">
+    tools:context="com.thinktanki.atmfinder.atm.MapFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
