--- a/app/src/main/res/layout/fragment_atmlist_view.xml
+++ b/app/src/main/res/layout/fragment_atmlist_view.xml
@@ -18,12 +18,34 @@
             android:scrollbars="vertical" />
 
     </android.support.v4.widget.SwipeRefreshLayout>
-    <TextView
+    <LinearLayout
         android:id="@+id/empty_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:textStyle="bold"
-        android:visibility="gone"
-        android:text="@string/no_data_available" />
+        android:orientation="vertical"
+        android:layout_height="200dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:visibility="gone">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:src="@drawable/icon_atmfinder"
+                android:layout_marginBottom="15dp"/>
+            <TextView
+                android:id="@+id/empty_view_txt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:textStyle="bold"
+                android:text="@string/no_data_available" />
+        </LinearLayout>
+
+    </LinearLayout>
 </RelativeLayout>
