--- a/app/src/main/res/layout/fragment_atmlist_view.xml
+++ b/app/src/main/res/layout/fragment_atmlist_view.xml
@@ -18,34 +18,31 @@
             android:scrollbars="vertical" />
 
     </android.support.v4.widget.SwipeRefreshLayout>
+
     <LinearLayout
         android:id="@+id/empty_view"
         android:layout_width="match_parent"
-        android:orientation="vertical"
-        android:layout_height="200dp"
+        android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
+        android:orientation="vertical"
         android:visibility="gone">
-        <LinearLayout
+
+        <ImageView
+            android:id="@+id/imageView"
             android:layout_width="wrap_content"
-            android:gravity="center"
-            android:orientation="vertical"
-            android:layout_height="wrap_content">
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:src="@drawable/icon_atmfinder"
-                android:layout_marginBottom="15dp"/>
-            <TextView
-                android:id="@+id/empty_view_txt"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:textStyle="bold"
-                android:text="@string/no_data_available" />
-        </LinearLayout>
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="15dp"
+            android:src="@drawable/ic_splash_screen" />
+
+        <TextView
+            android:id="@+id/empty_view_txt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/no_data_available"
+            android:textAlignment="center"
+            android:textStyle="bold" />
 
     </LinearLayout>
 </RelativeLayout>
