Added Bank search functionality

--- a/app/src/main/res/layout/fragment_bank_frgament.xml
+++ b/app/src/main/res/layout/fragment_bank_frgament.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.thinktanki.atmfinder.atm.ATMFragment">
+    tools:context="com.thinktanki.atmfinder.atm.BankFragment">
 
     <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/swipe_refresh_layout"
